# Clinic-Codex

./: .gitignore  DATASET_HOSTING.md  DATASET_USAGE.md  GITHUB_SETUP.md  README.md  TRAINING_GUIDE.md  generate_synthetic_dataset.py  inference.py  pyproject.toml  setup_data.py  train_yolo.py  verify_setup.py  verify_synthetic_dataset.py
data/: dataset.yaml
data_scripts/: create_dataset_archive.py  data-yaml-gen.py  data_processing.py  dataset_generator.py  generate_yolo_dataset.py  split_dataset.py  verify_dataset.py
